# amp_final

./: Where_I_Got_Files_From.txt  output.txt
install/: local_setup.sh  setup.sh
install/amp_agents/lib/amp_agents/: run
install/amp_agents/share/ament_index/resource_index/package_run_dependencies/: amp_agents
install/amp_agents/share/amp_agents/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/amp_msgs/include/amp_msgs/amp_msgs/msg/: ball_trajectory.h  ball_trajectory.hpp  k_ball.h  k_ball.hpp  launch_ball.h  rosidl_typesupport_fastrtps_c__visibility_control.h  set_pose.h  set_pose.hpp
install/amp_msgs/include/amp_msgs/amp_msgs/msg/detail/: agent_control__functions.h  agent_control__rosidl_typesupport_introspection_c.h  agent_control__traits.hpp  agent_control__type_support.c  agent_control__type_support.h  ball_trajectory__rosidl_typesupport_fastrtps_cpp.hpp  ball_trajectory__traits.hpp  ball_trajectory__type_support.hpp  ideal_path__builder.hpp  ideal_path__functions.c  ideal_path__rosidl_typesupport_fastrtps_cpp.hpp  ideal_path__rosidl_typesupport_introspection_c.h  ideal_path__struct.h  ideal_path__struct.hpp  ideal_path__traits.hpp  ideal_path__type_support.cpp  k_ball__functions.c  k_ball__functions.h  k_ball__rosidl_typesupport_fastrtps_c.h  k_ball__rosidl_typesupport_introspection_c.h  k_ball__struct.hpp  k_ball__traits.hpp  k_ball__type_support.h  launch_ball__builder.hpp  launch_ball__functions.c  launch_ball__functions.h  launch_ball__rosidl_typesupport_fastrtps_c.h  launch_ball__rosidl_typesupport_fastrtps_cpp.hpp  launch_ball__struct.hpp  launch_ball__traits.hpp  launch_ball__type_support.h  launch_ball__type_support.hpp  set_pose__builder.hpp  set_pose__functions.c  set_pose__rosidl_typesupport_fastrtps_cpp.hpp  set_pose__rosidl_typesupport_introspection_c.h  set_pose__struct.h  set_pose__struct.hpp  set_pose__traits.hpp  set_pose__type_support.c
install/amp_msgs/local/lib/python3.10/dist-packages/amp_msgs/: _amp_msgs_s.ep.rosidl_typesupport_fastrtps_c.c  _amp_msgs_s.ep.rosidl_typesupport_introspection_c.c
install/amp_msgs/local/lib/python3.10/dist-packages/amp_msgs-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/amp_msgs/local/lib/python3.10/dist-packages/amp_msgs/msg/: _ball_trajectory.py  _ball_trajectory_s.c  _ideal_path.py  _ideal_path_s.c  _k_ball.py  _k_ball_s.c  _launch_ball_s.c
install/amp_msgs/share/ament_index/resource_index/parent_prefix_path/: amp_msgs
install/amp_msgs/share/amp_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/amp_msgs/share/amp_msgs/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  amp_msgsConfig.cmake  amp_msgs__rosidl_typesupport_cExport.cmake  amp_msgs__rosidl_typesupport_cppExport.cmake  amp_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  amp_msgs__rosidl_typesupport_introspection_cExport.cmake  amp_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_amp_msgs__rosidl_generator_cExport-noconfig.cmake  export_amp_msgs__rosidl_generator_cExport.cmake  export_amp_msgs__rosidl_generator_cppExport.cmake  export_amp_msgs__rosidl_generator_pyExport.cmake  export_amp_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_amp_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_amp_msgs__rosidl_typesupport_fastrtps_cppExport.cmake
install/amp_msgs/share/amp_msgs/msg/: AgentControl.msg  BallTrajectory.msg  IdealPath.msg  KBall.idl  SetPose.idl  SetPose.msg
install/amp_sim/include/amp_sim/: agent_properties.hpp  agent_statuses.hpp  collision_checker.hpp  dynamic_ball.hpp  dynamic_object.hpp  environment_properties.hpp  omni_agent.hpp
install/amp_sim/lib/amp_sim/: sim_node
install/amp_sim/share/ament_index/resource_index/parent_prefix_path/: amp_sim
install/amp_sim/share/amp_sim/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amp_sim/share/amp_sim/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  amp_simConfig.cmake  dynamic_objectTargetsExport-noconfig.cmake  dynamic_objectTargetsExport.cmake  omni_agentTargetsExport-noconfig.cmake
install/amp_viz/include/: template_panel.hpp
install/amp_viz/include/amp_viz/: template_panel.hpp
install/amp_viz/lib/amp_viz/: marker_pub.py
install/amp_viz/share/: marker_pub.py
install/amp_viz/share/ament_index/resource_index/package_run_dependencies/: amp_viz
install/amp_viz/share/ament_index/resource_index/parent_prefix_path/: amp_viz
install/amp_viz/share/amp_viz/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh  rviz_common_plugins.xml
install/amp_viz/share/amp_viz/cmake/: ament_cmake_export_targets-extras.cmake  export_template_panelExport.cmake
install/amp_viz/share/amp_viz/launch/: amp_viz.launch.py
log/: latest_build
src/amp_agents/: CMakeLists.txt
src/amp_agents/data/: t1_stats.csv  tracking_stats.asv  tracking_stats.m  tree_stats.csv  tree_stats_analysis.asv  tree_stats_analysis.m  tree_stats_stops.csv
src/amp_agents/data/Figures/: untitled.fig
src/amp_agents/include/amp_agents/: agent_backend.hpp  omni_agent_actor.hpp  propagate_sst.hpp  visualize_tree.hpp
src/amp_agents/src/: agent_backend.cpp  collision_checker.cpp  omni_agent_actor.cpp  propagate_sst.cpp  run_agent.cpp  visualize_tree.cpp
src/amp_msgs/: CMakeLists.txt
src/amp_msgs/msg/: LaunchBall.msg
src/amp_sim/: CMakeLists.txt
src/amp_sim/include/amp_sim/: agent_properties.hpp  agent_statuses.hpp  dynamic_ball.hpp  dynamic_object.hpp
src/amp_sim/src/: collision_checker.cpp  dynamic_ball.cpp  dynamic_object.cpp  omni_agent.cpp  run_sim.cpp
src/amp_viz/: CMakeLists.txt  package.xml
src/amp_viz/config/: amp_config.rviz
src/amp_viz/meshes/cannon_barrel/: mesh.dae
src/amp_viz/src/: marker_pub.py  template_panel.cpp
src/amp_viz/src/ui/: template_panel.ui
